@@ -42,5 +42,10 @@ Version 0.9 of PostGIS includes patches from:
   Olivier Courtin <pnine@free.fr> on AsSVG()
   Bruno Wolff III on the distance_sphere algorithm
 
+Version 1.0.0 of PostGIS includes code from:
+  Mark Cave-Ayland <m.cave-ayland@webbased.co.uk> with new positional
+	operators, join estimator and general testing and support.
+  Markus Schaber <markus@schabi.de> author of the jdbc2 interface
+
 See the postgis manual for more contributors.
 
